refactor: Added Main.js and Main.css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     eligendi amet rem unde ea facere totam ullam sequi esse ipsum obcaecati laborum deleniti tempora accusantium harum
     quae quo similique dolorum, quod odio? Dolores ut provident cupiditate consequuntur odit iusto beatae culpa qui, eum
     adipisci quasi inventore nemo! Ex nemo quasi perspiciatis vel, velit eum. Rerum soluta cumque numquam excepturi?
-    Architecto officiis sit tempora quibusdam enim! Nemo blanditiis similique quaerat, ea soluta velit perferendis
+    Arch>itecto officiis sit tempora quibusdam enim! Nemo blanditiis similique quaerat, ea soluta velit perferendis
     provident rem animi, fugit, a officiis dolorum excepturi veritatis. Quis hic dolorem exercitationem reiciendis sunt
     expedita. Explicabo magnam alias amet aliquam sit.
 </body>
