--- a/index.html
+++ b/index.html
@@ -8,16 +8,31 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
+
+    <!-- BS5 Start -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- BS5 End -->
+
 </head>
 
 <body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis exercitationem illo inventore, nam deserunt
-    eligendi amet rem unde ea facere totam ullam sequi esse ipsum obcaecati laborum deleniti tempora accusantium harum
-    quae quo similique dolorum, quod odio? Dolores ut provident cupiditate consequuntur odit iusto beatae culpa qui, eum
-    adipisci quasi inventore nemo! Ex nemo quasi perspiciatis vel, velit eum. Rerum soluta cumque numquam excepturi?
-    Arch>itecto officiis sit tempora quibusdam enim! Nemo blanditiis similique quaerat, ea soluta velit perferendis
-    provident rem animi, fugit, a officiis dolorum excepturi veritatis. Quis hic dolorem exercitationem reiciendis sunt
-    expedita. Explicabo magnam alias amet aliquam sit.
+    <div class="navbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="join">Join</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="login">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="register">Register</a>
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
