--- a/index.html
+++ b/index.html
@@ -19,26 +19,28 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="javascript:void(0)">Logo</a>
+            <a class="navbar-brand" href="javascript:void(0)">PROJECT-B</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="mynavbar">
               <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0)">Link</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0)">Link</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0)">Link</a>
-                </li>
+                    <a class="nav-link" href="news">News</a>
+                  </li>
               </ul>
-              <form class="d-flex">
-                <input class="form-control me-2" type="text" placeholder="Search">
+              <!-- <form class="d-flex">
+                <input class="form-control me-2" type="text" placeholder="Search">          Search bar
                 <button class="btn btn-primary" type="button">Search</button>
-              </form>
+              </form> -->
+            </div>
+            <div class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="login">Login</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="register">Register</a>
+                  </li>
             </div>
           </div>
       </nav>
